--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: AnovaBYow
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: A package for bayesian analysis of variance
+Version: 0.0.1
 Authors@R: 
-    person(given = "First",
+    person(given = "Javier Rojas",
            family = "Last",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
+           email = "maujroja@espol.edu.ec",
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
 License: `use_mit_license()`, `use_gpl3_license()` or friends to
